# Silicon-Plate

./: .env.example  .gitignore  README.md  ml-plan.md  plan.md  pyproject.toml
docs/: rds-setup.md
etl/: 01_extract.py  02_transform.py  03_load.py
notebooks/: neighbourhood_clustering.ipynb
sql/: 01_create_schema.sql  03_analytical_queries.sql
